<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="364dp"
        android:layout_height="641dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/mainBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="121dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_home" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="305dp"
            android:layout_height="47dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:backgroundTint="@color/bg_editview"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/textWhite"
            android:textColorHint="@color/textWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="305dp"
            android:layout_height="47dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:backgroundTint="@color/bg_editview"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/textWhite"
            android:textColorHint="@color/textWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <Button
            android:id="@+id/button"
            android:layout_width="305dp"
            android:layout_height="53dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="240dp"
            android:background="@drawable/btn"
            android:text="@string/login"
            android:textColor="@color/textWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="305dp"
            android:layout_height="53dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="128dp"
            android:background="@drawable/btn"
            android:drawableStart="@drawable/logofb"
            android:drawablePadding="@dimen/cardview_default_radius"
            android:paddingStart="@android:dimen/app_icon_size"
            android:text="@string/btnconnect"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/textWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginEnd="152dp"
            android:layout_marginBottom="200dp"
            android:text="@string/or"
            android:textColor="@color/textWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="88dp"
            android:onClick="menu2"
            android:text="@string/txtregister"
            android:textColor="@color/textWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>