<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".Main4Activity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="470dp"
        android:text="@string/verify_your_account"
        android:textSize="30sp"
        android:textColor="@color/textWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="419dp"
        android:textColor="@color/textWhite"
        android:text="@string/we_have_send_verification_code_to_your_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.473" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="282dp"
        android:layout_height="43dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="325dp"
        android:ems="10"
        android:backgroundTint="@color/bg_editview"
        android:hint="@string/enter_verification_code_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/textWhite"
        android:textColorHint="@color/textWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <Button
        android:id="@+id/button5"
        android:layout_width="312dp"
        android:layout_height="59dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="255dp"
        android:text="@string/send"
        android:onClick="menu5"
        android:textSize="18sp"
        android:background="@drawable/btn"
        android:textColor="@color/textWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="211dp"
        android:textColor="@color/textWhite"
        android:text="@string/doesn_t_get_the_code_resend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</androidx.constraintlayout.widget.ConstraintLayout>