<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textWhite"
    tools:context=".Main2Activity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="412dp"
        android:layout_height="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_header" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_header_back" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@color/textWhite"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="361dp"
        android:layout_height="133dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <EditText
            android:id="@+id/editText"
            android:layout_width="303dp"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="9dp"
            android:layout_marginRight="26dp"
            android:ems="10"
            android:backgroundTint="@color/bg_intreg"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="303dp"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="26dp"
            android:ems="10"
            android:backgroundTint="@color/bg_intreg"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="304dp"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="26dp"
            android:ems="10"
            android:backgroundTint="@color/bg_intreg"
            android:hint="@string/phone_number"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="358dp"
        android:layout_height="37dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="60dp"
                android:text="@string/male"
                android:textColor="@color/rd"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="45dp"
                android:text="@string/female"
                android:textColor="@color/rd"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="354dp"
        android:layout_height="38dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/listItem"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="26dp"
            android:entries="@array/goldar"
            android:padding="5dp"
            android:paddingStart="0dp"></Spinner>

        <Spinner
            android:id="@+id/listItem2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="26dp"
            android:entries="@array/reshus"
            android:padding="5dp"
            android:paddingStart="0dp"></Spinner>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="353dp"
        android:layout_height="90dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="26dp"
            android:ems="10"
            android:backgroundTint="@color/bg_intreg"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="26dp"
            android:ems="10"
            android:backgroundTint="@color/bg_intreg"
            android:hint="@string/retype_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="359dp"
        android:layout_height="35dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="35dp"
                android:text="@string/personal"
                android:textColor="@color/rd"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton19"
                android:layout_width="145dp"
                android:layout_height="31dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/organization"
                android:textColor="@color/rd"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="240dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Spinner
            android:id="@+id/planets_spinner"
            android:layout_width="305dp"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="9dp"
            android:layout_marginRight="26dp"
            android:entries="@array/job"
            android:padding="10dp"
            android:paddingStart="0dp" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="26dp"
            android:autofillHints=""
            android:ems="10"
            android:backgroundTint="@color/bg_intreg"
            android:hint="@string/home_address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="306dp"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="26dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_blood_needed_location"
            android:ems="10"
            android:backgroundTint="@color/bg_intreg"
            android:hint="@string/default_location"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="302dp"
            android:layout_height="21dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="26dp"
            android:paddingLeft="15dp"
            android:text="@string/agree_with_terms_and_conditions"
            android:textColor="@color/rd" />

        <Button
            android:id="@+id/button2"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/btn2"
            android:text="@string/register"
            android:onClick="menu3"
            android:textColor="@color/mainBackground" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>